--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 {
   "compilerOptions": {
-    //modulos
+    // módulos
     "module": "nodenext",
     "target": "esnext",
     "moduleResolution": "nodenext",
+    "outDir": "./dist", // Carpeta donde se guardará el JavaScript compilado
 
     // ts estricto
     "strict": true,
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
-    "noImplicitReturns": true,
+    "noImplicitReturns": false, // DESACTIVADO para permitir retornos implícitos
     "noFallthroughCasesInSwitch": true,
 
     // tipos
@@ -26,4 +27,5 @@
     "moduleDetection": "force",
     "forceConsistentCasingInFileNames": true,
   },
+  "include": ["src/**/*"], // Asegura que solo compile lo que está en src
 }
